--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device=width, initial=scale=1.0">
     <meta name="Charly MOUNDOUNGA" content="Auteur ayant crée ce site web">
-    <meta http-equiv="refresh" content="5"> <!-- Pour rafraîchir la page toute les 5 secondes -->
+    <!--<meta http-equiv="refresh" content="5"> <!-- Pour rafraîchir la page toute les 5 secondes -->
     <title>LESKIDS20</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon"  type="image/gif" href="img/LOGO KIDS20-FINAL.gif" sizes="32x32">
