--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             
             <div class="plus">
-                <p class="parents">Pour visualiser plus de photos des parents cliquez <a href="https://disk.yandex.ru/client/disk/LESKIDS20/img_parents" target="_blank">ICI</a></p>
+                <p class="parents">Pour visualiser plus de photos des parents cliquez <a href="https://github.com/BYMBOUTSA/img_famille/tree/master/img_parents" target="_blank">ICI</a></p>
             </div>
 
         </div>
@@ -66,7 +66,7 @@
             <img src="img/family_1.JPG" width="250" height="250" alt="Photo des KIDS20">
 
             <div class="contenu">
-                <p class="KIDS">Pour visualiser plus de photo des KIDS cliquez <a href="https://disk.yandex.ru/client/disk/LESKIDS20/img_petits_enfants" target="_blank">ICI</a></p>
+                <p class="KIDS">Pour visualiser plus de photo des KIDS cliquez <a href="https://github.com/BYMBOUTSA/img_famille/tree/master/img_petits_enfants" target="_blank">ICI</a></p>
             </div>
 
         </div>
